shopgroup removed from location and put into the work dto/model